--- a/conf/application.conf
+++ b/conf/application.conf
@@ -101,6 +101,8 @@ play.filters {
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   enabled += filters.ExampleFilter
 
+  disabled += play.filters.csrf.CSRFFilter
+
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
 }
@@ -232,7 +234,7 @@ play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
-  enabled += filters.ExampleFilter
+  # enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
