--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,6 +58,7 @@ play.modules {
   # explicitly below.
   # If there are any built-in modules that you want to disable, you can list them here.
   #enabled += my.application.Module
+  enabled += "play.modules.reactivemongo.ReactiveMongoModule"
 
   # If there are any built-in modules that you want to disable, you can list them here.
   #disabled += ""
@@ -366,7 +367,7 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  #default.driver = org.h2.Driver
+  #driver = reactivemongo.Driver
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
@@ -375,3 +376,5 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
+
+mongodb.uri = "mongodb://localhost:27018/role-playing-service"
