--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "changeme"
+play.http.secret.key = "oquyewfgoauydsbvoauydfbgo"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
@@ -378,3 +378,5 @@ db {
 }
 
 mongodb.uri = "mongodb://localhost:27018/role-playing-service"
+
+apiPrefix = "api"
