--- a/react-ui/Dockerfile.prod
+++ b/react-ui/Dockerfile.prod
@@ -23,7 +23,7 @@ RUN npm run build
 FROM nginx:stable-alpine AS production
 
 # Copy built assets from build
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /public /usr/share/nginx/html
 
 # Add your nginx.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
